@@ -1,4 +1,6 @@
 1.3.3 - TBD
+    * Fixed rendering of the 1.8 door blocks using Birch, Spruce, Jungle,
+      Dark Oak, and Acacia wood
     * Set unknown blocks back to being invisible (instead of question marks).
 
 1.3.2 - 2014-12-13
